SERVER-21906 always use ReplicaSetMonitor when updating ShardRegistry lookup maps